fixed main image row with overflow sass

--- a/src/main.scss
+++ b/src/main.scss
@@ -127,6 +127,18 @@ $apiColor: #EBEBEB;
     }
   }
 
+  #imgRow {
+    height: 350px;
+    width: 100%;
+    margin-bottom: 10px;
+    overflow: hidden;
+
+      #main-image{
+        width: 940px;
+        height: 350px;
+      }
+  }
+
   .three-columns{
     @include span-columns(12);
     width: 100%;
